Don't early out recursion into PaintLayerChildren when computing composited bounds.

PaintLayer::boundingBoxForCompositing recursively computes the union of the
bounds of a root PaintLayer and its non-comositing descendants. Previously, in PaintLayer::boundingBoxForCompositing, there was code that would avoid recursing
into PaintLayer children if the PaintLayer was clipped. This is incorrect if there
are any PaintLayer descendants that have different clipping ancestors than
the current PaintLayer.

Also fixed a bug that transform-related properties were not considered containing
blocks for clipping of fixed-position children.

BUG=618046
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2502833002
Cr-Commit-Position: refs/heads/master@{#433232}

Former-commit-id: b33e49953078995f1cd28663a8a8b43012ac2eb0